# soccer-stats

./: .env.example  .gitignore  Output.ipynb  Output1.ipynb  Pipfile  README.md  app.py  config.py  cprob_simulation.py  experiments.ipynb  experiments_1.ipynb  ftp_test.py  ftp_transfer.py  no_draw_distribution_test.py  pyproject.toml  requirements.txt  run_win.bat  sandbox.ipynb  sandbox_runner.py  sendgrid_test.py  simulation_comparison.py  simulation_report.docx  simulation_report.md  soccer1.py  statistical_tests.py  taskfile.yml  team_simulation.py  update.py
.github/workflows/: daily-update.yml
lib/: __init__.py  championships.py
openspec/: project.md
openspec/changes/add-period-draw-rate/: proposal.md  tasks.md
openspec/changes/archive/2026-01-12-modernize-python-uv/: tasks.md
openspec/changes/modernize-python-uv/: design.md  proposal.md  tasks.md
openspec/changes/optimize-update-pipeline/: tasks.md
openspec/specs/build-tooling/: spec.md
openspec/specs/statistics/: spec.md
results_to_keep/: simulation_Old_c_prob_Streak__4.xlsx  simulation_Old_c_prob_Streak__6.xlsx  simulation_c_prob_adj_Threshold_080.xlsx  simulation_c_prob_adj_Threshold_090.xlsx
sandbox/: ftp_test.py  think_pmf.py
sp_soccer_lib/: __init__.py  championships.py  date_parsers.py  handout_helpers.py  mail_send.py  probabilities.py  simulation.py
tests/: benchmark.py  capture_baseline.py  compare_baseline.py  quick_baseline.py  test_codium.py  test_england.py  test_greece.py  test_update_pipeline.py
tests/fixtures/: baseline_stats.json
(+6 files in other folders)
