[project]
name = "soccer-analytics"
version = "1.0.0"
description = "Soccer statistics and simulation platform for European championships"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0.0",
    "handout>=1.1.2",
    "loguru>=0.7.2",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "sendgrid>=6.11.0",
]

[dependency-groups]
dev = [
    "ipython>=8.20.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    "external/",      # Third-party ThinkBayes libraries
    "*.ipynb",        # Jupyter notebooks (experimental code)
    "sandbox/",       # Experimental sandbox code
    "sandbox_runner.py",
    "ftp_transfer.py", # Legacy FTP utility
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
